update translations for English and German

--- a/baseline_trials/UniversalNormPage.html
+++ b/baseline_trials/UniversalNormPage.html
@@ -311,7 +311,7 @@
          <br>
 
         <p style="text-align: center;">
-            <b> {{ univ_norm_incentive|safe }} </b>
+             {{ univ_norm_incentive|safe }}
         </p>
 
         </div>
