changed some titles and block names

--- a/baseline_trials/ComprehensionQuestionPage.html
+++ b/baseline_trials/ComprehensionQuestionPage.html
@@ -4,7 +4,7 @@
     {{ button_block|safe }} 1
 </div>
 
-<p style="text-align: center"> {{ comprehension_title|safe }} </p>
+<p style="text-align: center; font-size: 26px; margin-bottom: 4px; "> {{ comprehension_title|safe }} </p>
 
 <div style="display: flex; justify-content: center; margin-bottom: 4px;">
     <label>
