--- a/baseline_trials/Instructions.html
+++ b/baseline_trials/Instructions.html
@@ -1,7 +1,9 @@
 
 {{ block title }}
 
-
+<div class="block-header">
+    {{ button_block|safe }} 1
+</div>
 
 <p style="text-align: center; font-size: 26px; margin-bottom: 4px; ">
     {{ instructions_title|safe }}
