--- a/baseline_trials/DictatorPage.html
+++ b/baseline_trials/DictatorPage.html
@@ -4,7 +4,7 @@
     {{ button_block|safe }} 1
 </div>
 
-<p style="text-align: center; font-size: 26px;  "> {{ button_decision|safe }} {{player.round_number}} </p>
+<p style="text-align: center; font-size: 26px; margin-bottom: 4px; "> {{ button_decision|safe }} {{player.round_number}} </p>
 
 <div style="display: flex; justify-content: center; margin-bottom: 4px;">
     <label>
