smaller text updates

--- a/baseline_trials/Introduction.html
+++ b/baseline_trials/Introduction.html
@@ -36,6 +36,10 @@
         <b>{{ intro_conversion }}</b>
     </p>
 
+    <p>
+        <b>{{ intro_blocks }}</b>
+    </p>
+
     <h6><u>{{ intro_block1_title }}</u></h6>
 
      <p>
@@ -68,6 +72,10 @@
 
     <p>
         {{ intro_toluna }}
+    </p>
+
+    <p>
+        <b>{{ intro_blocks }}</b>
     </p>
 
     <h6><u>{{ intro_block1_title }}</u></h6>
