update loading in of country list

--- a/baseline_trials/Instructions.html
+++ b/baseline_trials/Instructions.html
@@ -689,7 +689,7 @@
         </p>
 
         <p>
-            {{ instru_countries_list }}
+            <i>{{ instru_countries_list }}</i>
         </p>
 
         <img style="width:75%; display: block; margin: 0 auto;" src="/static/global/all_participating_countries_map.png">
