added an example for TG

--- a/dice_task/DiceRatings.html
+++ b/dice_task/DiceRatings.html
@@ -404,7 +404,7 @@
             <div class="dot" id="dice1-8"></div>
             <div class="dot" id="dice1-9"></div>
         </div>
-        <div>
+        <div style="font-size: 14px">
             {{ dice_rolled }}
         </div>
     </div>
@@ -429,7 +429,7 @@
             <div class="dot" id="dice2-8"></div>
             <div class="dot" id="dice2-9"></div>
         </div>
-        <div>
+        <div style="font-size: 14px">
             {{ dice_reported }}
         </div>
     </div>
@@ -488,6 +488,7 @@
     <br>
     <p>
         {{ dice_trust_game }}
+        {{ dice_example }}
     </p>
 
     <div class='responsive-div'>
